--- a/experiments/cfg/transductive_ml_1m.yml
+++ b/experiments/cfg/transductive_ml_1m.yml
@@ -1,8 +1,8 @@
 SEED: 123
 DATASET:
-  NAME: ml-100k
+  NAME: ml-1m
   VALID_RATIO: 0.1
-  TEST_RATIO: 0.2
+  TEST_RATIO: 0.1
   IS_INDUCTIVE: false
   INDUCTIVE_KEY: item
   INDUCTIVE_NODE_FRAC: 20
