--- a/experiments/cfg/inductive_ml_100k.yml
+++ b/experiments/cfg/inductive_ml_100k.yml
@@ -4,7 +4,7 @@ DATASET:
   VALID_RATIO: 0.1
   TEST_RATIO: 0.2
   IS_INDUCTIVE: true
-  INDUCTIVE_KEY: item
+  INDUCTIVE_KEY: user
   INDUCTIVE_NODE_FRAC: 20
   INDUCTIVE_EDGE_FRAC: 50
 MODEL:
