--- a/experiments/cfg/inductive_ml_1m_user_50.yml
+++ b/experiments/cfg/inductive_ml_1m_user_50.yml
@@ -2,11 +2,11 @@ SEED: 123
 DATASET:
   NAME: ml-1m
   VALID_RATIO: 0.1
-  TEST_RATIO: 0.1
-  IS_INDUCTIVE: false
-  INDUCTIVE_KEY: item
+  TEST_RATIO: 0.2
+  IS_INDUCTIVE: true
+  INDUCTIVE_KEY: user
   INDUCTIVE_NODE_FRAC: 20
-  INDUCTIVE_EDGE_FRAC: 90
+  INDUCTIVE_EDGE_FRAC: 50
 MODEL:
   USE_EMBED: true
   USE_FEA_PROJ: false
@@ -20,12 +20,12 @@ MODEL:
 GRAPH_SAMPLER:
   NUM_NEIGHBORS: -1
 FEA:
-  MID_MAP: 0
-  UNITS: 0
+  MID_MAP: 32
+  UNITS: 32
 EMBED:
   UNITS: 32
-  MASK_PROP: 0.1
-  P_ZERO: 0.0
+  MASK_PROP: 0.4
+  P_ZERO: 1.0
 GCN:
   TYPE: gcn
   DROPOUT: 0.5
@@ -33,7 +33,7 @@ GCN:
   AGG:
     NORM_SYMM: true
     UNITS: [250]
-    ACCUM: sum
+    ACCUM: stack
   OUT:
     UNITS: [75]
 GEN_RATING:
