--- a/experiments/cfg/inductive_ml_1m_user_50.yml
+++ b/experiments/cfg/inductive_ml_1m_user_50.yml
@@ -2,7 +2,7 @@ SEED: 123
 DATASET:
   NAME: ml-1m
   VALID_RATIO: 0.1
-  TEST_RATIO: 0.2
+  TEST_RATIO: 0.1
   IS_INDUCTIVE: true
   INDUCTIVE_KEY: user
   INDUCTIVE_NODE_FRAC: 20
@@ -20,20 +20,20 @@ MODEL:
 GRAPH_SAMPLER:
   NUM_NEIGHBORS: -1
 FEA:
-  MID_MAP: 32
-  UNITS: 32
+  MID_MAP: 0
+  UNITS: 0
 EMBED:
-  UNITS: 32
+  UNITS: 64
   MASK_PROP: 0.4
   P_ZERO: 1.0
 GCN:
   TYPE: gcn
-  DROPOUT: 0.5
+  DROPOUT: 0.3
   USE_RECURRENT: false
   AGG:
     NORM_SYMM: true
     UNITS: [250]
-    ACCUM: stack
+    ACCUM: sum
   OUT:
     UNITS: [75]
 GEN_RATING:
