--- a/experiments/cfg/inductive_ml_1m_user_30.yml
+++ b/experiments/cfg/inductive_ml_1m_user_30.yml
@@ -39,7 +39,7 @@ GCN:
 GEN_RATING:
   MID_MAP: 64
 TRAIN:
-  RATING_BATCH_SIZE: 100000
+  RATING_BATCH_SIZE: 1000000
   RECON_BATCH_SIZE: 1000000
   MAX_ITER: 1000000
   LOG_INTERVAL: 10
